# network

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
network/: main.cpp
src/: Layer.cpp  Layer.h  LearningRate.cpp  LearningRate.h  Mnist_test.cpp  Mnist_test.h  Network.cpp  Network.h  ScoreFunc.cpp  ScoreFunc.h  Score_Func.cpp  Score_Func.h  ThresholdFunc.cpp  ThresholdFunc.h  Threshold_Func.cpp  Threshold_Func.h  Xor_test.cpp  Xor_test.h  except.cpp  except.h  main.cpp  sin_test.cpp  sin_test.h  tests.cpp  tests.h  utils.h
test/: Mnist_test.cpp  except.h  main.cpp  sin_test.cpp  tests.cpp  tests.h
